[package]
name = "minesweeper-d2d"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cli"
path="src/cli.rs"

[[bin]]
name="app"
path="src/app.rs"


[dependencies]
rand = {version="0.8", features=["std_rng"]}

[dependencies.windows]
version = "0.41"
features = [
    "Foundation",
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]